force-app/main/default/objects/Inspection_Questions__c/Inspection_Questions__c.object-meta.xml
<CustomObject>
    <description>This object stores questions used in an Inspection</description>
    <label>Inspection Question</label>
    <nameField>
        <displayFormat>IQ-{000000}</displayFormat>
        <label>Inspection Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>