force-app/main/default/objects/Inspection_Questions__c/fields/Inspection_Section__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Section__c</fullName>
    <description>Defines the section of the Inspection that the question should display in. Dependent list based on the inspection type.</description>
    <inlineHelpText>Select the section in which the question should be displayed.</inlineHelpText>
    <label>Inspection Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inspection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Primary Employer</fullName>
            </value>
            <value>
                <fullName>Interviewee</fullName>
            </value>
            <value>
                <fullName>License Information</fullName>
            </value>
            <value>
                <fullName>Worker&#39;s Compensation Insurance Information</fullName>
            </value>
            <value>
                <fullName>Employer/Principle Information</fullName>
            </value>
            <value>
                <fullName>Wage Information</fullName>
            </value>
            <value>
                <fullName>IWC Order</fullName>
            </value>
            <value>
                <fullName>Primary Employer Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>