force-app/main/default/objects/Inspection_Questions__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <description>Defines the inspection type that the question should be listed on</description>
    <inlineHelpText>Select the type of inspection this question is relevant for</inlineHelpText>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
                <default>true</default>
                <label>BOFE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>