force-app/main/default/objects/Inspection_Questions__c/fields/Response_Options__c.field-meta.xml
<CustomField>
    <fullName>Response_Options__c</fullName>
    <description>Defines the options available for checkbox or picklist fields. Required for these types of fields by validation rule.</description>
    <inlineHelpText>Enter the options available for Checkbox or Picklist type fields</inlineHelpText>
    <label>Response Options</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>