force-app/main/default/objects/Inspection_Questions__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <description>Defines the type of response expected to the question</description>
    <inlineHelpText>Select the response that is expected to the question. For Checkbox or Picklist, fill out the &quot;Response Options&quot; field. For &quot;Related Record&quot; select the related record type that will be generated.</inlineHelpText>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>