force-app/main/default/objects/Inspection_Questions__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Used to determine the order in which to present the questions</description>
    <inlineHelpText>Enter the order in which you want the questions to be presented.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>