force-app/main/default/objects/Inspection_Questions__c/fields/Source_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_Data__c</fullName>
    <description>Defines a field on the parent object that should pre-populate the inspection form VF page to present to the user</description>
    <inlineHelpText>Enter the API NAME of the field from which the pre-populated data should come from.</inlineHelpText>
    <label>Source Data</label>
    <length>80</length>
    <type>Text</type>
</CustomField>