force-app/main/default/objects/Inspection_Questions__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inspection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BOFE General</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Farm Labor</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>