force-app/main/default/objects/Inspection_Questions__c/listViews/UpdateParentRecord.listView-meta.xml
<ListView>
    <fullName>UpdateParentRecord</fullName>
    <columns>NAME</columns>
    <columns>Inspection_Section__c</columns>
    <columns>Inspection_Question__c</columns>
    <columns>Response_Type__c</columns>
    <columns>Response_Options__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Active__c</columns>
    <columns>Source_Data__c</columns>
    <columns>Update_Parent_Record__c</columns>
    <columns>Inspection_Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inspection_Type__c</field>
        <operation>equals</operation>
        <value>BOFE</value>
    </filters>
    <filters>
        <field>Update_Parent_Record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>UpdateParentRecord</label>
    <sharedTo>
        <group>BOFE_Admin</group>
        <group>BOFE_Senior_Deputies</group>
    </sharedTo>
</ListView>